<resources>
    <string name="app_name">TGT</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="map">Map</string>
    <string name="measure">Measure</string>
    <string name="tracker">Tracker</string>
    <string name="achievements">Achievements</string>
    <string name="about_us_title">About Us</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="help">Help and Feedback</string>
    <string name="terms">Terms and Conditions</string>
    <string name="faq">FAQ</string>
    <string name="about_keen">About KEEN</string>
    <string name="privacy">Privacy Policy</string>
    <string name="offline_maps">Offline Maps</string>
    <string name="offline" translatable="false">Offline Trail Segments</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="search_title">Search</string>
    <string name="btnGPS">My location</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoiZm9uZ2QiLCJhIjoiY2owanhtNDY3MDF0ZzJxbzN1dnVieGtuZiJ9.4glgLhaD_5oSETp874jFTw</string>
    <string name="about_text">This app is a trail guide and trip planner for anyone who wants to explore The Great Trail—Canada’s epic 24,000-km network of trails brought to you by Trans Canada Trail and its partners.\n\n
        The Great Trail: A National Icon. The Trans Canada Trail Aims for The Great Trail to be connected in 2017 for Canada 150.\n\n
        Canada is home to the greatest trail in the world. When we stand on The Great Trail, there is one common element that unites us from coast-to-coast-to-coast. It’s the view that all those travelling the Trail share—the horizon. This view is full of possibilities, discovery and adventure, linking 15,000 communities along 24,000 km. To follow the horizon along The Great Trail is to discover the beauty of Canada. Its vanishing point leads us across our country, through the wild, the rural and the urban, by waterways, roadways and footpaths.\n\n\n
    </string>
    <string name="terms_conditions">Terms &amp; conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="distance"> DISTANCE </string>
    <string name="time"> TIME </string>
    <string name="elevation"> ELEVATION </string>
    <string name="start"> Start </string>
    <string name="menu"> Menu </string>
    <string name="pause"> Pause </string>
    <string name="save"> Save </string>
    <string name="delete"> Delete </string>
    <string name="activity">Activity</string>
    <string name="delete_activity_title"> Delete Activity </string>
    <string name="delete_activity_message">Are you sure you want to delete this activity ?</string>
    <string name="mapMessage">Tap on Trail for more information.</string>
    <string name="segmentInfo"  translatable="false"> &lt;b>&lt;i> %1$s &lt;/i>&lt;/b> &lt;br/> &lt;small> %2$.2f km &lt;/small> </string>
    <string name="measureMessage">Tap to drop a pin on the trail.</string>
    <string name="measureMessage2">Drop another pin on the Trail to measure distance</string>
    <string name="clear_measurement_title">Clear Measurement</string>
    <string name="clear_measurement_message">Are you sure you want clear this measurement?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="activity_tracker_name">Activity Tracker Name</string>
    <string name="activity_tracker_name_message">Please choose a name for your track.</string>
    <string name="delete_activity_confirmation_title">Delete Activity</string>
    <string name="delete_activity_confirmation_message">The activity was  deleted successfully.</string>
    <string name="drop_pin_note">Tap on the trail precisely or zoom in</string>
    <string name="activity_log_message">You have no saved trails.</string>
    <string name="activity_log">Activity Log</string>
    <string name="add_caption">Add a caption</string>
    <string name="select_area">Select Area</string>
    <string name="select_area_message">Pan and zoom the map to include the area you wish to make available for offline use.</string>
    <string name="area_selection">Area Selection</string>
    <string name="offline_trails" translatable="false">Offline Trails</string>
    <string name="offline_trails_message">You don\'t have any offline locations yet.\nTap the + button to get started!</string>
    <string name="it_make_take_a_while">It make take a while to download map data to your device, especially if you have a selected a large area.</string>
    <string name="select_area_name">Download</string>
    <string name="rendering">Rendering</string>
    <string name="saving">Saving</string>
    <string name="deleting">Deleting</string>
    <string name="take_while">This may take a while....</string>
    <string name="beautifing">Beautifying the landscape...</string>
    <string name="total_cache_size">Total cache size:<br /> </string>
    <string name="region_name_empty">Region name cannot be empty.</string>
    <string name="enter_name">Enter name</string>
    <string name="no_internet">No Internet connection</string>
    <string name="error">Error</string>
    <string name="need_online">You need to be online to download maps.</string>
    <string name="must_online_trail">You must be online to view trails</string>
    <string name="must_online_measure">You must be online to access measure</string>
    <string name="must_online_search">You must be online to access search</string>
    <string name="photo_not_available">Photo not available</string>
    <string name="directions_to_trail">Directions to the Trail</string>
    <string name="share">Share</string>
    <string name="photo">Photo</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="blank_category">Your search returned no results.</string>
    <string name="get_current_place">Get Current Place</string>
    <string name="show_result">Show Result</string>
    <string name="direction_footer_message">You have arrived at the trail</string>
    <string name="direction_footer_map">Map data &#169;2017 Google</string>
    <string name="ok_button"> Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="imgdesc" translatable="false">imgdesc</string>
    <string-array name="Settings">
        <item></item>
        <item>Restrict updates to wifi</item>
        <item>Include location with photo</item>
        <item>Activity Tracker geolocation accuracy</item>
        <item></item>
        <item>Version</item>
        <item></item>
    </string-array>
    <string-array name="Settings2">
        <item></item>
        <item>Best for navigation</item>
        <item>Best Accuracy</item>
        <item>Ten meters</item>
        <item>Hundred meters</item>
        <item></item>
    </string-array>
    <string-array name="Settings3">
        <item></item>
        <item>Most accurate and most-power intensive option</item>
        <item>use the highest-level of accuracy</item>
        <item>Accurate to within 10 meters of desired target</item>
        <item>Accurate to within 100 meters </item>
        <item></item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings2">Accuracy</string>
    <string name="title_activity_offline" translatable="false">OfflineMapActivity</string>
    <string name="title_activity_simplify_polyline" translatable="false">SimplifyPolylineActivity</string>
    <string name="title_activity_offline_trails" translatable="false">OfflineTrailsActivity</string>
    <string name="title_activity_select_area" translatable="false">SelectAreaActivity</string>
    <string name="title_activity_display_offline_trails" translatable="false">DisplayOfflineTrailsActivity</string>
    <string name="quality_title">QUALITY</string>
    <string name="quality_text">KEEN Inc. is a values led, independently owned outdoor footwear brand with a mission to responsibly create original and versatile products, improve lives, and inspire outdoor adventure.</string>
    <string name="integrity_title">INTEGRITY</string>
    <string name="integrity_text">Founded in 2003, KEEN ignited a revolution in the footwear industry with the introduction of the Newport sandal, launching the concept of Hybrid footwear into the market and setting KEEN on a path of driving consistent product innovation.</string>
    <string name="health_title">HEALTH</string>
    <string name="health_text">KEEN passionately endeavors to live fulfilling lives, challenge the status quo, do good, give back and inspire others.</string>
    <string name="caring_title">CARING</string>
    <string name="caring_text">KEEN strives to live by its values from its products to its actions, and by activating communities and individuals to protect and preserve the places where we work and play.</string>
    <string name="keen_site"><font color='#000000'>TO LEARN MORE PLEASE VISIT </font> <font color='#FFFFFF'>WWW.KEENFOOTWEAR.COM</font></string>
    <string name="search_hint">Search for trails and more</string>
    <string name="helveticaneue" translatable="false">HelveticaNeue</string>
    <string name="helveticaneue_bold" translatable="false">HelveticaNeue-Bold</string>
    <string name="slide1">This app is a trail guide and trip planner for adventurous people who want to explore the Great Trail.</string>
    <string name="slide2">Select and learn about individual trails, upload your trail photos and see photos submitted by other adventure seekers.</string>
    <string name="slide3">Planning ahead with the easy-to-use search tool. Shortcuts to nearby services makes finding a trailhead or rest area a breeze.</string>
    <string name="slide4">Visualize the journey ahead with the Measure Tool and calculate the distance you need to travel. Get a sneak peek of the elevation you’ll experience with the expanded elevation profile.</string>
    <string name="slide5">Remember every adventure with the Activity Tracker. Keep up with how much of the trail you’ve conquered and share your journey on social media.</string>
    <string name="skip_this">Skip this »</string>
    <string name="made_by_canada">MADE BY CANADA</string>
    <string name="trip_planning">Trip Planning made easy</string>
    <string name="understand_landscape">Understand the landscape</string>
    <string name="track_ur_trek">Track your trek</string>
    <string name="upload_trail">Upload a photo of this Trail</string>
    <string name="trail_type">Trail Type</string>
    <string name="activities">Activities</string>
    <string name="environment">Environment</string>
    <string name="other_res">Other Resources</string>
    <string name="menu_about" translatable="false">About</string>
    <string name="menu_about_keen" translatable="false">About Keen</string>
    <string name="menu_donate" translatable="false">Donate</string>
    <string name="menu_feedback" translatable="false">Help And Feedback</string>
    <string name="menu_offline_map" translatable="false">Offline Maps</string>
    <string name="menu_faq" translatable="false">FAQ</string>
    <string name="menu_setting" translatable="false">Settings</string>
    <string name="menu_exit" translatable="false">Exit</string>
    <string name="get_started_dialog_title">Get Started</string>
    <string name="get_started_dialog_message">Track your trek to earn badges and become a trail expert</string>
    <string name="get_started_dialog_dismiss">Dismiss</string>
    <string name="get_started_dialog_start">Start</string>
</resources>