<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pur_white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pur_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_small"
            android:paddingTop="@dimen/spacing_tiny"
            android:text="@string/get_started_dialog_title"
            android:textColor="@color/dialogColor"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="14dip"
        android:paddingTop="10dp"
        android:text="@string/get_started_dialog_message"
        android:textColor="@color/md_black_1000"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_small">

        <TextView
            android:id="@+id/dismiss_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_toLeftOf="@+id/start_btn"
            android:text="@string/get_started_dialog_dismiss"
            android:textColor="@color/gray2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/get_started_dialog_start"
            android:textColor="@color/dialogColor"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
