<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text= "@string/select_area_name"
        android:textColor="@color/md_black_1000"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/textViewTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/it_make_take_a_while"
        android:paddingTop="7dp"
        android:textColor="@color/md_black_1000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/textViewMessage" />


    <EditText
        android:id="@+id/edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_name"
        android:textColorHint="@color/textGrey"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:shadowColor="@color/blueGreen"
        android:padding="10dp" />

</LinearLayout>