<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    app:layout_collapseParallaxMultiplier="1.0">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark"
            android:id="@+id/flickrImg"
            android:layout_weight="0.23" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:id="@+id/sumlengthTxt" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:gravity="center"
            android:id="@+id/trailLarge" />
    </FrameLayout>

    <Button
        android:text="@string/upload_trail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_shape"
        android:textColor="@android:color/white"
        android:id="@+id/uploadImg" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="7dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/trail_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#cacaca"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="#cacaca"/>

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/trailTypeTxt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="7dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#cacaca"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="#cacaca"/>

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/activityTxt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="7dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/environment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#cacaca"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="#cacaca"/>

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/environmentTxt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="7dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/other_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#cacaca"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="3dp"
            android:background="#cacaca"/>
        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/blueGreen"
            android:id="@+id/otherTxt" />
    </LinearLayout>

</LinearLayout>